force-app/main/default/objects/Reviewer_Question_Template__c/Reviewer_Question_Template__c.object-meta.xml
<CustomObject>
    <label>Reviewer Question Template</label>
    <nameField>
        <displayFormat>RQT-{00000}</displayFormat>
        <label>Reviewer  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewer Question Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>