force-app/main/default/objects/Reviewer_Question_Template__c/fields/Is_Visible_To_Peer_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible_To_Peer_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible To Peer Reviewer</label>
    <type>Checkbox</type>
</CustomField>