force-app/main/default/objects/Reviewer_Question_Template__c/fields/Scheme_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Questionnaire</label>
    <referenceTo>Scheme_Questionnaire__c</referenceTo>
    <relationshipLabel>Reviewer Question Templates</relationshipLabel>
    <relationshipName>Reviewer_Question_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>