force-app/main/default/objects/Reviewer_Question_Template__c/fields/SL_No__c.field-meta.xml
<CustomField>
    <fullName>SL_No__c</fullName>
    <label>SL.No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>