force-app/main/default/objects/Reviewer_Question_Template__c/fields/Yearly_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Schemes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Schemes</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Reviewer Question Templates</relationshipLabel>
    <relationshipName>Reviewer_Question_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>