force-app/main/default/objects/Reviewer_Question_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Yearly_Schemes__c</columns>
    <columns>Scheme_Questionnaire__c</columns>
    <columns>Question__c</columns>
    <columns>Is_Visible_To_Peer_Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>